# dump-dvb.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/: pull_request_template.md
.github/workflows/: check-and-lint.yaml
migration-based/2023-03-05-145240_setup/: up.sql
migrations-based/2023-03-05-145240_setup/: down.sql  up.sql
migrations-based/2023-03-11-232631_stops-json-table/: down.sql  up.sql
migrations-based/2023-03-19-163912_regions-make-telegram-type-consistent/: down.sql  up.sql
migrations-based/2023-03-23-000027_adding-organization/: down.sql  up.sql
migrations-based/2023-03-25-204038_add_org_owner/: down.sql  up.sql
migrations-based/2023-03-26-175751_deactivate-column/: down.sql  up.sql
migrations-based/2023-03-30-100445_trekkie_runs_add_correlated/: down.sql  up.sql
migrations-based/2023-03-31-132143_transmission_postion_region_position_constraint/: down.sql  up.sql
migrations-based/2023-03-31-161306_adding-geo-pos/: down.sql  up.sql
migrations-based/2023-04-01-101213_add-stats-tables/: down.sql  up.sql
migrations-based/2023-04-21-173111_add-commit-column/: down.sql  up.sql
migrations-based/2023-04-22-222439_create_r09_telegrams_time_index/: down.sql  up.sql
migrations/2022-09-02-235851_create_tables/: down.sql  up.sql
migrations/2022-09-07-223110_tracy_runs/: down.sql  up.sql
migrations/2022-09-08-000258_sessions/: down.sql  up.sql
migrations/2022-09-08-134035_histroy/: down.sql  up.sql
migrations/2022-09-21-202416_renaming_tracy_to_trekkie/: down.sql  up.sql
migrations/2022-10-01-182923_user_table_nullable/: down.sql  up.sql
migrations/2022-10-02-170358_trekkie_run_schema/: down.sql  up.sql
migrations/2022-10-07-160604_make_password_not_nullable/: down.sql  up.sql
migrations/2022-10-10-202029_regioback/: down.sql  up.sql
migrations/2022-12-26-155807_add_deactivated_to_regions/: down.sql  up.sql
migrations/2022-12-28-211125_change_type_telegram_decoder_version/: down.sql  up.sql
migrations/2023-01-02-031714_adding_internal_table/: down.sql  up.sql
migrations/2023-01-03-214312_change_type_of_region_in_telegrams/: down.sql  up.sql
migrations/2023-03-04-161905_new-gps-table/: down.sql  up.sql
migrations/2023-03-04-210357_remove-gps-file-column/: down.sql  up.sql
migrations/2023-03-04-224121_removing-useless-shit/: down.sql  up.sql
migrations/2023-03-04-225852_change-data-type/: up.sql
proto/: telegram.proto
src/: gps_ddvb.rs  lib.rs  measurement.rs  measurements.rs  receivers.rs  schema.rs  statistics.rs  structs.rs
src/locations/: gps.rs  graph.rs  mod.rs  region.rs  tests.rs  waypoint.rs
src/management/: mod.rs  user.rs
src/stations/: mod.rs  tests.rs
src/telegrams/: mod.rs  r09.rs  raw.rs  unsupported.rs
src/tracy/: mod.rs
src/trekkie/: mod.rs
