[package]
name = "tlms"
version = "0.7.6"
edition = "2021"

[features]



schema = ["dep:log"]

management = [
    "schema",
    "dep:pbkdf2",
    "dep:rand",
    "dep:regex"
]

locations = [
    "schema",
    "reqwest"
]

receivers = []

telegrams = [
    "schema",
    "locations",
    "management",
    "dep:log",
    "dep:num-traits",
    "dep:regex",
    "dep:csv",
    "dep:struct-field-names-as-array",
    "dep:tonic",
    "dep:prost"
]
measurements = []
trekkie = ["schema"]

[dependencies]

serde_json = "*"
serde = {version = "*", features = ["derive"]}
chrono = {version = "*", features = [ "serde" ]}
uuid = {version = "*", features = ["serde", "v4"]}
dotenv = {version = "*"}
num-derive = {version = "*"}

diesel = { version = "*", features = ["postgres", "r2d2", "chrono", "uuid"]}

tonic = {version = "0.7", optional = true}
prost = {version = "0.10", optional = true}

csv = {version = "*", optional = true}
struct-field-names-as-array = {version = "*", optional = true}
num-traits = {version = "*", optional = true}
pbkdf2 = {version = "*", optional = true}
rand = {version = "*", optional = true}
log = { version = "*", optional = true}
regex = {version = "*", optional = true}
reqwest = {version = "0.11", optional = true, features = ["blocking"]}

[build-dependencies]
tonic-build = "0.7"
