[package]
name = "tlms"
version = "0.7.7"
edition = "2021"

[features]



schema = ["dep:log"]

management = [
    "schema",
    "dep:pbkdf2",
    "dep:rand",
    "dep:regex"
]

locations = [
    "schema",
    "reqwest"
]

receivers = []

telegrams = [
    "schema",
    "locations",
    "management",
    "dep:log",
    "dep:num-traits",
    "dep:regex",
    "dep:csv",
    "dep:struct-field-names-as-array",
    "dep:tonic",
    "dep:prost"
]
measurements = []
trekkie = ["schema"]

[dependencies]

serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
chrono = {version = "0.4", features = [ "serde" ]}
uuid = {version = "1.2", features = ["serde", "v4"]}
dotenv = {version = "0.15"}
num-derive = {version = "0.3"}

diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "uuid"]}

tonic = {version = "0.7", optional = true}
prost = {version = "0.10", optional = true}

csv = {version = "1.2", optional = true}
struct-field-names-as-array = {version = "0.1", optional = true}
num-traits = {version = "0.2", optional = true}
pbkdf2 = {version = "0.12", optional = true}
rand = {version = "0.8", optional = true}
log = { version = "0.4", optional = true}
regex = {version = "1.7", optional = true}
reqwest = {version = "0.11", optional = true, features = ["blocking"]}

[build-dependencies]
tonic-build = "0.7"
